[package]
name = "test1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mequeue_1"
path = "mequeue_1.rs"

[[bin]]
name = "check"
path = "check.rs"

[[bin]]
name = "artemis"
path = "artemis.rs"

[dependencies]
tachyonix = "0.2"
artemis-core = { git = "https://github.com/mekosko/artemis", branch = "deadlock" }
mequeue_1 = { git = "https://github.com/mekosko/mequeue", package = "mequeue" }
mequeue_2 = { git = "https://github.com/mekosko/mequeue", package = "mequeue", branch = "with_flume" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
anyhow = "1"
tracing-subscriber = "0.3"
async-channel = "1"
